# MyJobSpyAI

./: .coveragerc copy  .editorconfig  .env.example  .flake8  .gitattributes copy  .gitignore  .gitignore copy  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .windsurfrules  0.2.0  0.4.6  1.1.0  13.0.0  2.0.0  2.4.0  2.5.0  20221105  3.0.0  =0.3.0.4  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  JOBSEARCH_README.md  LANGCHAIN_README.md  MANIFEST.in  MIGRATION_GUIDE.md  Makefile  MyJobSpyAI.code-workspace  PROJECT_STRUCTURE.md  README-DOCS.md  README.md  build_docs.sh  config.example.yaml  config.py  config.yaml  convert_rst_to_md.py  docker-compose.yml  (+31 more)
.github/workflows/: project-sync.yml  test.yml  tests.yml
.history/: .gitignore_20250430174403  .gitignore_20250430174408  .gitignore_20250430174416  .gitignore_20250430174418  .gitignore_20250430174420  .gitignore_20250430174424  .gitignore_20250430174431  .gitignore_20250430174434  .gitignore_20250430174435  .gitignore_20250430174437  .gitignore_20250430174439  .gitignore_20250430174440  .gitignore_20250430174442  .gitignore_20250430174445  .gitignore_20250430174449  .gitignore_20250430174451  .gitignore_20250430174456  .gitignore_20250507175922  README_20250501163709.md  README_20250507155536.md  README_20250507155538.md  README_20250507155541.md  README_20250507155546.md  README_20250507155550.md  README_20250507170058.md  README_20250507170102.md  README_20250507170105.md  README_20250507170110.md  README_20250507170112.md  README_20250507170116.md  config_20250507151813.yaml  config_20250507155226.yaml  config_20250507155227.yaml  config_20250507155244.py  config_20250507161000.yaml  config_20250507161020.yaml  config_20250507161022.yaml  config_20250507161029.yaml  config_20250507161033.yaml  config_20250507163813.yaml  (+31 more)
.history/analysis/: analyzer_20250507154532.py  analyzer_20250507154556.py  analyzer_20250507154558.py  analyzer_20250507155339.py  analyzer_20250507155346.py  analyzer_20250507155406.py  analyzer_20250507155412.py  analyzer_20250507155426.py  analyzer_20250507155430.py  analyzer_20250507155452.py  analyzer_20250507161630.py  analyzer_20250507161633.py  analyzer_20250507165820.py  analyzer_20250507165821.py  analyzer_20250507165830.py  analyzer_20250507165837.py  analyzer_20250507165855.py  analyzer_20250507165930.py  analyzer_20250507165941.py  analyzer_20250507170002.py  analyzer_20250507170003.py  analyzer_20250507170021.py  analyzer_20250507170025.py  analyzer_20250507170030.py  analyzer_20250507170032.py  analyzer_20250507172122.py  analyzer_20250507172426.py  models_20250430173239.py  models_20250507154505.py
.project/boards/: 2024-06-05_resume_job_suitability_enhancement.md
.windsurf/rules/: best-practices.md  configuration.md  core-system-components.md  data-processing.md  development-workflow.md  llm-integration.md  logging-and-monitoring.md  project-structure.md  terminal-activate-env.md  testing.md
analysis/: analyzer.py  chunking_utils.py  models.py  run_analysis.sh
analysis/prompts/: job_extraction.prompt  resume_extraction.prompt  suitability_analysis.prompt
config/: .env.example  __init__.py  api.py  cache.py  database.py  langchain_config.yaml  llm.py  logging_config.py  scraping.py  utils.py
docs/: README.md  README.rst  build_docs.bat  build_docs.sh  changelog.md  changelog.rst  conf.py  configuration.rst  contributing.rst  examples.rst  generate_api_docs.py  getting_started.rst  index.md  index.rst  installation.rst  langchain_integration.md  macros.py  mkdocs.yml  requirements-docs.txt  rstcheck.conf  serve_docs.sh  setup_docs.sh  usage.rst
docs/ISSUES/: Phase2_Refactoring.md  Phase3_Scrapers.md
docs/api/: index.md  index.rst  modules.md  modules.rst  myjobspyai.analysis.analyzer.md  myjobspyai.analysis.analyzer.rst  myjobspyai.analysis.chunking_utils.md  myjobspyai.analysis.chunking_utils.rst  myjobspyai.analysis.md  myjobspyai.analysis.models.md  myjobspyai.analysis.models.rst  myjobspyai.analysis.providers.base.md  myjobspyai.analysis.providers.base.rst  myjobspyai.analysis.providers.factory.md  myjobspyai.analysis.providers.factory.rst  myjobspyai.analysis.providers.langchain_provider.md  myjobspyai.analysis.providers.langchain_provider.rst  myjobspyai.analysis.providers.md  myjobspyai.analysis.providers.rst  myjobspyai.analysis.rst  myjobspyai.analysis.utils.chunking.md  myjobspyai.analysis.utils.chunking.rst  myjobspyai.analysis.utils.langchain_otel.md  myjobspyai.analysis.utils.langchain_otel.rst  myjobspyai.analysis.utils.md  myjobspyai.analysis.utils.rst  myjobspyai.config.md  myjobspyai.config.rst  myjobspyai.filtering.filter.md  myjobspyai.filtering.filter.rst  myjobspyai.filtering.filter_utils.md  myjobspyai.filtering.filter_utils.rst  myjobspyai.filtering.md  myjobspyai.filtering.rst  myjobspyai.llm.base.md  myjobspyai.llm.base.rst  myjobspyai.llm.md  myjobspyai.llm.providers.langchain.md  myjobspyai.llm.providers.langchain.rst  myjobspyai.llm.providers.md  (+57 more)
docs/architecture/: service_layer.md
docs/backup_rst/: configuration.md  contributing.md  examples.md  getting_started.md  index.md  installation.md  usage.md
docs/checklists/: LLM_LANGCHAIN_CHECKLIST.md
docs/development/: code_style.md  contributing.md  deployment.md  testing.md
docs/enhancement_plans/: future_features.md  (+2 more)
examples/: instructor_ollama_example.py  langchain_demo.py  langchain_example.py
filtering/: filter.py  filter_utils.py
myjobspyai/: __init__.py  __main__.py  exceptions.py
parsers/: job_parser.py  resume_parser.py
scripts/: build_docs.sh  cleanup_docs.py  convert_docs.py  fix_all_permissions.sh  fix_file_permissions.sh  organize_docs.py  update_docs_dependencies.py  update_mkdocs_config.py
test_results/: job_analysis_results_20250528_181604.json
tests/: README.md  __init__.py  conftest.py  test_analyzer_async.py  test_base_provider.py  test_config.py  test_http_client.py  test_langchain_integration.py  test_langchain_provider.py  test_llm_provider.py  test_provider_factory.py  test_rag_processor.py  test_resume_parser_v2.py  utils.py
(+377 files in other folders)
