[metadata]
description-file = README.md
license_file = LICENSE

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 88
extend-ignore = E203, W503
max-complexity = 10
select = B,C,E,F,W,T4,B9
per-file-ignores =
    # Ignore unused imports in __init__.py files
    __init__.py: F401

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
disallow_untyped_decorators = True
check_untyped_defs = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True

[coverage:run]
source = myjobspyai
omit =
    */tests/*
    */__pycache__/*
    */version.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise NotImplementedError
    if __name__ == .__main__.:
    pass
    raise ImportError

[egg_info]
tag_build =
tag_date = 0
